--- a/WalkingMan/WalkingMan.project
+++ b/WalkingMan/WalkingMan.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="CGcourse" InternalType="Console">
+<CodeLite_Project Name="WalkingMan" InternalType="Console">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00010001N0005Debug000000000000]]>
@@ -9,14 +9,13 @@
   <Dependencies/>
   <VirtualDirectory Name="src">
     <File Name="main.cpp"/>
-    <File Name="ver2.h"/>
-    <File Name="shader.h"/>
-    <File Name="controls.h"/>
-    <File Name="texture.h"/>
-    <File Name="objLoader.h"/>
-    <File Name="ColorArrays.fragmentshader"/>
     <File Name="ColorArrays.vertexshader"/>
+    <File Name="ColorArrays.fragmentshader"/>
+    <File Name="../tool/shader.h"/>
+    <File Name="../tool/texture.h"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
   <Settings Type="Executable">
     <GlobalSettings>
       <Compiler Options="" C_Options="" Assembler="">
@@ -35,7 +34,7 @@
       <Linker Options="-framework OpenGL;" Required="yes">
         <LibraryPath Value="/usr/local/lib/"/>
         <Library Value="glfw"/>
-        <Library Value="GLEW"/>
+        <Library Value="glew"/>
       </Linker>
       <ResourceCompiler Options="" Required="no"/>
       <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Debug" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
@@ -43,7 +42,7 @@
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
       </Environment>
-      <Debugger IsRemote="no" RemoteHostName="" RemoteHostPort="" DebuggerPath="" IsExtended="no">
+      <Debugger IsRemote="no" RemoteHostName="" RemoteHostPort="" DebuggerPath="" IsExtended="yes">
         <DebuggerSearchPaths/>
         <PostConnectCommands/>
         <StartupCommands/>
