--- a/RayTracing/RayTracing.project
+++ b/RayTracing/RayTracing.project
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CodeLite_Project Name="RayTracing" InternalType="Console">
+  <Plugins>
+    <Plugin Name="qmake">
+      <![CDATA[00010001N0005Debug000000000000]]>
+    </Plugin>
+  </Plugins>
   <Description/>
   <Dependencies/>
+  <VirtualDirectory Name="src">
+    <File Name="main.cpp"/>
+    <File Name="RT.fragmentshader"/>
+    <File Name="RT.vertexshader"/>
+    <File Name="Ray.h"/>
+    <File Name="Ray.cpp"/>
+    <File Name="IntersectResult.h"/>
+    <File Name="IntersectResult.cpp"/>
+    <File Name="Camera.h"/>
+    <File Name="Camera.cpp"/>
+    <File Name="Scene.h"/>
+    <File Name="Scene.cpp"/>
+  </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
       <Compiler Options="" C_Options="" Assembler="">
@@ -15,8 +33,13 @@
     <Configuration Name="Debug" CompilerType="GCC" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
       <Compiler Options="-g;-O0;-Wall" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
         <IncludePath Value="."/>
+        <IncludePath Value="/usr/local/include/"/>
       </Compiler>
-      <Linker Options="" Required="yes"/>
+      <Linker Options="-framework OpenGL" Required="yes">
+        <LibraryPath Value="/usr/local/lib/"/>
+        <Library Value="glew"/>
+        <Library Value="glfw"/>
+      </Linker>
       <ResourceCompiler Options="" Required="no"/>
       <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Debug" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
@@ -92,9 +115,4 @@
       </Completion>
     </Configuration>
   </Settings>
-  <VirtualDirectory Name="src">
-    <File Name="main.cpp"/>
-    <File Name="RT.fragmentshader"/>
-    <File Name="RT.vertexshader"/>
-  </VirtualDirectory>
 </CodeLite_Project>
